# r2d2

./: .clangd  .gitignore  .gitmodules  AGENTS.md  Dockerfile  MODULE.bazel  Makefile  WORKSPACE.bazel  extensions.bzl  r2-dev
.github/workflows/: build.yml
dome_ctlr/: CMakeLists.txt
dome_ctlr/src/: dome_ctlr_node.cpp
dome_motor/: BUILD.bazel  DomeMotor.cpp  DomeMotor.hpp  TMC2209.cpp  TMC2209.hpp  dome_cli.cpp  hello_motor.cpp
firmware/: BUILD.bazel  CMakeLists.txt  defs.bzl
firmware/bootloader/r2can_boot/: CMakeLists.txt  Makefile  README.md  build.sh  flash_r2can.py  main.c  pico_sdk_import.cmake
firmware/front_logic/: BUILD  CMakeLists.txt  compile_commands.json  pico_sdk_import.cmake
firmware/front_logic/.cache/clangd/index/: hardware.h.598B39B660BAEE3C.idx  logic_lights.c.3A15DFC3CAC262DE.idx  logic_lights.h.73DC216DF066E3D1.idx  main.c.42D84C5A18402705.idx  r2bus_receiver.c.668EC5B2C13FDCC4.idx  r2bus_receiver.h.F54FA734330C1877.idx  screen.c.8BAB7A1BAA2AB037.idx  screen.h.D6F0442C1C0FB1E5.idx  status_led.c.9C2C8F0824A5774D.idx  status_led.h.35967D3206B7E061.idx  status_led.h.B2A6659800678793.idx  tasks.c.6CCD46A39EC68AF9.idx  tasks.h.5063F183E27580A4.idx
firmware/front_logic/include/: can_receiver.h  hardware.h  logic_lights.h  screen.h
firmware/front_logic/src/: can_receiver.c  logic_lights.c  main.c  r2bus_receiver.c  screen.c  status_led.c  tasks.c
firmware/holoprojector/: .gitignore  BUILD.bazel  CMakeLists.txt  flash_rs485.py  linker.ld  servo_cli.py
firmware/holoprojector/include/: hardware.h  psi_light.h  ws2812.h
firmware/holoprojector/src/: holoprojector_lights.c  main.c  pico_servo.pio  r2bus_receiver.c  status_led.c  ws2812.c
firmware/libs/mcp2515/: BUILD.bazel  CMakeLists.txt
firmware/libs/mcp2515/include/: mcp2515.h
firmware/libs/mcp2515/src/: mcp2515.c
firmware/libs/r2bus/: BUILD.bazel  CMakeLists.txt
firmware/libs/r2bus/include/: r2bus.h  r2bus.pb.h  r2bus_proto.h  r2bus_transmitter.h  rs485.h
firmware/libs/r2bus/scripts/: r2bus_proto_cli.py  r2bus_tool.py
firmware/libs/r2bus/src/: r2bus.pb.c  r2bus_transmitter.c  rs485.c
firmware/libs/st7789/: BUILD.bazel  CMakeLists.txt
firmware/libs/st7789/include/: st7789.h
firmware/libs/st7789/src/: st7789.c
firmware/libs/v2_bsp/: BUILD.bazel  CMakeLists.txt
firmware/libs/v2_bsp/include/: board.h
firmware/libs/v2_bsp/src/: board.c
gateway/: package.xml  setup.py
gateway/gateway/: r2bus_gateway.py  web_bridge.py
holoprojector/: CMakeLists.txt  package.xml
holoprojector/firmware/holoprojector/: holoprojector.ino  holoprojector.pb.h
holoprojector/firmware/v1/: CMakeLists.txt  README.md  flash_rs485.py  r2bus_proto_cli.py  r2bus_tool.py  servo_cli.py
holoprojector/firmware/v1/.cache/clangd/index/: DEV_Config.c.33D59E99707C0EB0.idx  DEV_Config.h.E043ADB33F817234.idx  fix16.c.37C3E21D265D94B8.idx  fix16.h.A97EEA48F4C252E9.idx  fix16_exp.c.BFD99CF87E2888C7.idx  fix16_sqrt.c.2484EBF6CFBC9906.idx  fix16_trig.c.EEA21D7627809AD4.idx  fixmath.h.1EF5D139947B139F.idx  fract32.c.77453F929B74383D.idx  fract32.h.7C5FD8D0F3002A39.idx  holoprojector_lights.c.C0C99ADAC68807E8.idx  holoprojector_lights.h.360A16A5666E71EB.idx  int64.h.5894EE0EFE49E402.idx  main.c.521C58C14C69238D.idx  pb.h.03C4346AEC8AFE5D.idx  pb_common.c.6551058D01C4F60C.idx  pb_common.h.57CA5059DB3BC047.idx  pb_decode.c.E5E8B94C29F9B6B5.idx  pb_decode.h.40F2814151AD8EC0.idx  pb_encode.c.7EB422E65A071137.idx  pb_encode.h.ED522A74A82DC44C.idx  pico_servo.c.8DF6B51CBAD7ED68.idx  pico_servo.h.493AE2AA4D421AF1.idx  psi_light.c.7C1BD1B96D50F07E.idx  psi_light.h.C73DAAC511CE01E6.idx  r2bus.c.A7D51393244014F2.idx  r2bus.h.532E0812C0DF1C76.idx  r2bus.pb.c.4B3C8B89F416E3BB.idx  r2bus.pb.h.0C7931F7ACAD41B2.idx  r2bus_proto.h.2F8AE6EE8D9B6E26.idx  r2bus_receiver.c.CD3C4BAA0EF0E0EB.idx  r2bus_receiver.h.9FA526E416FFF6B0.idx  r2bus_receiver.h.E6330D28D83EF97F.idx  r2bus_transmitter.c.208500490B0450CD.idx  r2bus_transmitter.h.1D387BE542C27DA2.idx  rs485.c.CED2C88641E7600A.idx  rs485.h.C23F2D145F4395A0.idx  status_led.c.BBF2653A9274EA0E.idx  status_led.h.699705889B9DEEC3.idx  tasks.c.43B2CB0ABB551049.idx  (+5 more)
holoprojector/firmware/v1/include/: holoprojector_lights.h  pico_servo.h  r2bus.h  r2bus_transmitter.h  rs485.h  status_led.h  tasks.h  ws2812.h
holoprojector/firmware/v1/libs/: CMakeLists.txt
holoprojector/firmware/v1/libs/nanopb/: CMakeLists.txt
holoprojector/firmware/v1/proto/: r2bus.options  r2bus.pb.c  r2bus.pb.h  r2bus.proto  r2bus_pb2.py
holoprojector/firmware/v1/src/: main.c  pico_servo.c  psi_light.c  r2bus.c  r2bus_receiver.c  r2bus_receiver.h  r2bus_transmitter.c  rs485.c  tasks.c  ws2812.c
holoprojector/include/holoprojector/: SerialInterface.hpp
holoprojector/proto/: holoprojector.options
holoprojector/src/: Holoprojector.cpp  SerialInterface.cpp
interfaces/: CMakeLists.txt
interfaces/msg/: HoloColorRequest.msg
interfaces/srv/: SendHeartbeat.srv  SendHoloColorRequest.srv  SendPing.srv  SendPsiColorRequest.srv  SendPsiMoodRequest.srv
joystick_ctrl/: package.xml
launch/: dome_launch.py  dome_launch.xml
r2bus_codegen/: BUILD  config.json  r2bus_codegen.py  r2bus_generated.c  r2bus_generated.h  sample_heartbeat.c
remote/: package.xml
remote/remote/: remote_main.py
ros2_ws/: Dockerfile.build  docker-compose.dev.yml  dockerfile.dev
ros2_ws/launch/: dome_launch.py  (+1 more)
ros2_ws/src/interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/interfaces/msg/: Ack.msg  ArmRequest.msg  Empty.msg  FirmwareInfo.msg  FirmwareProgress.msg  Heartbeat.msg  HoloPositionRequest.msg  HoloprojectorState.msg  Ping.msg  PsiMoodRequest.msg  ServoHomeCommand.msg  ServoMoveCommand.msg
ros2_ws/src/interfaces/srv/: FirmwareUpdate.srv  GetAvailableFirmware.srv  SendEmpty.srv  SendHoloPositionRequest.srv  SendPong.srv  SendServoHomeCommand.srv  SendServoMoveCommand.srv
tools/cc/: BUILD.bazel  aarch64-ar.sh  aarch64-cpp.sh  aarch64-dwp.sh  aarch64-g++.sh  aarch64-gcc.sh  aarch64-gcov.sh  aarch64-ld.sh  aarch64-nm.sh  aarch64-objcopy.sh  aarch64-objdump.sh  aarch64-strip.sh  aarch64_toolchain_config.bzl
(+34 files in other folders)
