bazel_dep(name = "rules_pkg", version = "1.1.0")

pico_libfixmath = use_extension("//:extensions.bzl", "local_vendor")
use_repo(pico_libfixmath, "pico_libfixmath")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "pico-sdk", version = "2.2.1-develop.bcr.20250915-8fcd44a1")
bazel_dep(name = "picotool", version = "2.2.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "nanopb", version = "0.4.9")

local_path_override(
    module_name = "nanopb",
    path = "firmware/libs/nanopb",
)

register_toolchains(
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:linux-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:win-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:win-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2040",
    "@pico-sdk//bazel/toolchain:mac-x86_64-rp2350",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2040",
    "@pico-sdk//bazel/toolchain:mac-aarch64-rp2350",
    "//tools/cc:aarch64_linux_toolchain",
)
