# Top-level firmware aggregator target.
# Build v1 (rp2040):  bazel build //firmware:all --platforms=@pico-sdk//bazel/platform:rp2040
# Build v2 (rp2350):  bazel build //firmware:all --platforms=@pico-sdk//bazel/platform:rp2350
package(default_visibility = ["//visibility:public"])

alias(
    name = "front_logic_v1",
    actual = "//firmware/front_logic:front_logic/1",
)

alias(
    name = "front_logic_v2",
    actual = "//firmware/front_logic:front_logic/2",
)

alias(
    name = "holoprojector",
    actual = "//firmware/holoprojector:holoprojector_pico_v1.elf",
)
