load("@rules_cc//cc:defs.bzl", "cc_toolchain")

package(default_visibility = ["//visibility:public"])

load("//tools/cc:aarch64_toolchain_config.bzl", "aarch64_linux_toolchain_config")

filegroup(
    name = "aarch64_tools",
    srcs = glob(["aarch64-*.sh"]),
)

aarch64_linux_toolchain_config(
    name = "aarch64_linux_toolchain_config",
)

cc_toolchain(
    name = "aarch64_linux_cc_toolchain",
    toolchain_identifier = "aarch64-linux-gnu-gcc",
    toolchain_config = ":aarch64_linux_toolchain_config",
    all_files = ":aarch64_tools",
    ar_files = ":aarch64_tools",
    as_files = ":aarch64_tools",
    compiler_files = ":aarch64_tools",
    dwp_files = ":aarch64_tools",
    linker_files = ":aarch64_tools",
    strip_files = ":aarch64_tools",
    objcopy_files = ":aarch64_tools",
    supports_param_files = True,
)

toolchain(
    name = "aarch64_linux_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":aarch64_linux_cc_toolchain",
)
