load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "mcp2515",
    srcs = ["src/mcp2515.c"],
    hdrs = ["include/mcp2515.h"],
    includes = ["include"],
    target_compatible_with = select({
        "@pico-sdk//bazel/constraint:host": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "@pico-sdk//src/rp2_common/hardware_spi",
        "@pico-sdk//src/rp2_common/pico_stdlib",
    ],
)
