load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@pico-sdk//bazel:defs.bzl", "compatible_with_rp2")
load("@nanopb//extra/bazel:nanopb_cc_proto_library.bzl", "cc_nanopb_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "r2bus_proto",
    srcs = ["proto/r2bus.proto"],
)

cc_nanopb_proto_library(
    name = "r2bus_pb",
    nanopb_options_files = ["proto/r2bus.options"],
    protos = [":r2bus_proto"],
    target_compatible_with = compatible_with_rp2(),
)

cc_library(
    name = "r2bus",
    srcs = [
        "src/r2bus.c",
        "src/r2bus_transmitter.c",
        "src/rs485.c",
    ],
    hdrs = glob(["include/**/*.h"]),
    includes = ["include"],
    target_compatible_with = compatible_with_rp2(),
    deps = [
        ":r2bus_pb",
        "@pico-sdk//src/rp2_common/pico_stdlib",
    ],
)
