load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "st7789",
    srcs = ["src/st7789.c"],
    hdrs = ["include/st7789.h"],
    includes = ["include"],
    target_compatible_with = select({
        "@pico-sdk//bazel/constraint:host": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "@pico-sdk//src/rp2_common/hardware_spi",
        "@pico-sdk//src/rp2_common/pico_stdlib",
    ],
)
