load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "v2_bsp",
    srcs = ["src/board.c"],
    hdrs = ["include/board.h"],
    includes = ["include"],
    target_compatible_with = ["@pico-sdk//bazel/constraint:rp2350"],
    deps = [
        "@pico-sdk//src/rp2_common/hardware_spi",
        "@pico-sdk//src/rp2_common/pico_stdlib",
    ],
)
